--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "faker": "^5.5.3",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.13",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "method-override": "^3.0.0",
+    "passport-local": "^1.0.0"
   }
 }
