--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_CONNECT = mongodb+srv://huudanh2802:28022001@cluster0.hnigz.mongodb.net/db_bo
 
 SESSION_SECRET= BOOKSTORE
 
-SHOP_GMAIL_USERNAME = donut.bookstore@gmail.com
-SHOP_GMAIL_PASSWORD = ukiaqua18
+SHOP_GMAIL_USERNAME = donutbookstoretkpm@gmail.com
+SHOP_GMAIL_PASSWORD = Enma28022001
